--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
   },
   "homepage": "https://github.com/nyoon8360/mywebsite#readme",
   "dependencies": {
+    "@emotion/react": "^11.11.1",
     "next": "^13.4.4",
     "react": "^18.2.0",
+    "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0"
   }
 }
