--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "next": "^13.4.4",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-switch": "^7.0.0"
   }
 }
