--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
-    "react-switch": "^7.0.0"
+    "react-switch": "^7.0.0",
+    "swiper": "^10.3.1"
   }
 }
