--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
   "homepage": "https://github.com/nyoon8360/mywebsite#readme",
   "dependencies": {
     "@emotion/react": "^11.11.1",
-    "next": "^13.4.4",
+    "@vercel/speed-insights": "^1.0.11",
+    "next": "^14.2.3",
     "react": "^18.2.0",
     "react-awesome-reveal": "^4.2.5",
     "react-dom": "^18.2.0",
